# Optim

./: CMakeLists.txt
inc/: Genocop.h  ObjectiveFunction.h  OptimizationVideoWriter.h  common.h
src/: Genocop.cpp  OptimizationVideoWriter.cpp  common.cpp  main.cpp
